# h2e

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  start-website.ps1  vercel.json  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/skills/01-architecture/: skill.md
.claude/skills/02-ui-and-brand/: skill.md
.claude/skills/03-components/: skill.md
.claude/skills/04-quality-perf-a11y/: skill.md
.claude/skills/05-testing/: skill.md
api/: extract.py
boq-agent/: .env.example  README.md  pyproject.toml
boq-agent/src/boq_agent/: __init__.py  cli.py  config.py  processor.py
boq-agent/src/boq_agent/assembly/: __init__.py  assembler.py
boq-agent/src/boq_agent/classification/: __init__.py  classifier.py
boq-agent/src/boq_agent/extraction/: __init__.py  chunker.py  extractor.py  prompts.py
boq-agent/src/boq_agent/output/: __init__.py  generator.py
boq-agent/src/boq_agent/parsers/: __init__.py  base.py  docx_parser.py  excel_parser.py  image_parser.py  pdf_parser.py
boq-agent/templates/: default_template.yaml
docs/plans/: 2026-02-19-boq-agent-design.md
h2epromts/: session_2025-02-04.md
public/: _force_deploy.txt  test.html
src/: App.css  App.tsx  index.css  main.tsx
src/components/layout/: Header.module.css  Header.tsx  Layout.module.css  Layout.tsx  ProjectSelector.module.css  ProjectSelector.tsx  Sidebar.module.css  Sidebar.tsx
src/components/modals/: NewProjectModal.module.css  NewProjectModal.tsx
src/components/tables/: DataTable.module.css  DataTable.tsx
src/components/ui/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  FileUpload.module.css  FileUpload.tsx  Modal.module.css  Modal.tsx  StatCard.module.css  StatCard.tsx  (+3 more)
src/constants/: scopes.ts
src/context/: NotificationContext.tsx  ProjectContext.tsx  TenderContext.tsx  ThemeContext.tsx
src/hooks/: useExcelParser.ts
src/pages/: BOQ.module.css  BOQ.tsx  BOQExtract.module.css  BOQExtract.tsx  Compare.module.css  Compare.tsx  Dashboard.module.css  Dashboard.tsx  Documents.module.css  Documents.tsx  Estimates.module.css  Estimates.tsx  QA.module.css  QA.tsx  Risks.module.css  Risks.tsx  Settings.module.css  Settings.tsx
src/styles/: globals.css
src/types/: project.ts  tender.ts
(+15 files in other folders)
